[gd_scene load_steps=5 format=2]

[ext_resource path="res://client/states/HostJoinGameState.gd" type="Script" id=1]
[ext_resource path="res://client/states/common/MenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://client/states/common/MenuPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://client/states/common/TextInput.tscn" type="PackedScene" id=4]

[node name="HostJoinGameState" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" parent="." instance=ExtResource( 2 )]

[node name="MenuPanel" parent="." instance=ExtResource( 3 )]

[node name="PlayerNameTextInput" parent="." instance=ExtResource( 4 )]
anchor_left = 0.344
anchor_top = 0.139
anchor_right = 0.656
anchor_bottom = 0.903
margin_left = 87.18
margin_top = 159.92
margin_right = -37.62
margin_bottom = -260.28

[node name="GameNameTextInput" parent="." instance=ExtResource( 4 )]
anchor_left = 0.344
anchor_top = 0.139
anchor_right = 0.656
anchor_bottom = 0.903
margin_left = 87.18
margin_top = 259.92
margin_right = -37.62
margin_bottom = -160.28

[node name="StartButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 490.0
margin_top = 470.0
margin_right = -640.0
margin_bottom = -215.0
rect_scale = Vector2( 2, 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 540.0
margin_top = 560.0
margin_right = -640.0
margin_bottom = -135.0
rect_scale = Vector2( 2, 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
